Convert Items to Java 9 compatibility (handle deprecation)